@@ -1,5 +1,8 @@
 Release 2.6.1 - ???
 
+   * Fix bug that prevented digests when the fallback/EmptyParser
+     was called (TIKA-3939).
+
    * Remove log4j 1.2.x (and slf4j-log4j12 which now redirects to slf4j-reload4j) from
      all modules (TIKA-3935).
 
